fix: scrollbar

--- a/client/packages/styles/src/globals.css
+++ b/client/packages/styles/src/globals.css
@@ -1,22 +1,14 @@
-html {
-  scroll-behavior: smooth;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-
-/* Works on Firefox */
-* {
-  scrollbar-width: thin;
-}
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 12px;
-}
-*::-webkit-scrollbar-track {
-  background: #2e2e2e;
-}
-*::-webkit-scrollbar-thumb {
-  background-color: #757575;
-  border-radius: 20px;
-  border: 3px solid #2e2e2e;
+body::-webkit-scrollbar {
+  display: none;
 }
 
 :root {
